# Netsentinel

./: .gitignore  CMakeLists.txt  Makefile  README.md
config/: ids.conf
include/: Alert.h  AlertManager.h  DetectionEngine.h  EventSimulator.h  FileLogger.h  IdsConfig.h  LiveCapture.h  NetworkEvent.h  PortScanRule.h  SecurityAnalyzer.h  SshBruteForceRule.h
src/: Alert.cpp  AlertManager.cpp  DetectionEngine.cpp  EventSimulator.cpp  FileLogger.cpp  IdsConfig.cpp  LiveCapture.cpp  NetworkEvent.cpp  PortScanRule.cpp  SecurityAnalyzer.cpp  SshBruteForceRule.cpp  main.cpp
tests/: IdsTests.cpp
